// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonCopy Component > renders "Copied!" text and is disabled when isCopied is true 1`] = `
<div>
  <button
    class="button button--small button--gray button--icon"
    data-testid="buttonTestId"
    disabled=""
    type="button"
  >
    <svg
      data-testid="leftIconButtonTestId"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.222 19.778a4.983 4.983 0 0 0 3.535 1.462 4.986 4.986 0 0 0 3.536-1.462l2.828-2.829-1.414-1.414-2.828 2.829a3.007 3.007 0 0 1-4.243 0 3.005 3.005 0 0 1 0-4.243l2.829-2.828-1.414-1.414-2.829 2.828a5.006 5.006 0 0 0 0 7.071zm15.556-8.485a5.008 5.008 0 0 0 0-7.071 5.006 5.006 0 0 0-7.071 0L9.879 7.051l1.414 1.414 2.828-2.829a3.007 3.007 0 0 1 4.243 0 3.005 3.005 0 0 1 0 4.243l-2.829 2.828 1.414 1.414 2.829-2.828z"
      />
      <path
        d="m8.464 16.95-1.415-1.414 8.487-8.486 1.414 1.415z"
      />
    </svg>
    Copied!
  </button>
</div>
`;

exports[`ButtonCopy Component > renders with initial text and calls copy function on click 1`] = `
<div>
  <button
    class="button button--small button--gray button--icon"
    data-testid="buttonTestId"
    type="button"
  >
    <svg
      data-testid="leftIconButtonTestId"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.222 19.778a4.983 4.983 0 0 0 3.535 1.462 4.986 4.986 0 0 0 3.536-1.462l2.828-2.829-1.414-1.414-2.828 2.829a3.007 3.007 0 0 1-4.243 0 3.005 3.005 0 0 1 0-4.243l2.829-2.828-1.414-1.414-2.829 2.828a5.006 5.006 0 0 0 0 7.071zm15.556-8.485a5.008 5.008 0 0 0 0-7.071 5.006 5.006 0 0 0-7.071 0L9.879 7.051l1.414 1.414 2.828-2.829a3.007 3.007 0 0 1 4.243 0 3.005 3.005 0 0 1 0 4.243l-2.829 2.828 1.414 1.414 2.829-2.828z"
      />
      <path
        d="m8.464 16.95-1.415-1.414 8.487-8.486 1.414 1.415z"
      />
    </svg>
    Share
  </button>
</div>
`;
